examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/return_deref_wrong_ref.st
language core;
extend with #references;

fn foo(n : Nat) -> Nat { return 0 }

fn main(n : Nat) -> Bool {
	return *(new (foo(0)))
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
